apps/production/maubot/maubot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maubot 
  namespace: matrix
  labels:
    app.kubernetes.io/name: maubot
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: maubot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: maubot
    spec:
      containers:
        - image: dock.mau.dev/maubot/maubot:latest
          name: maubot
          resources: {}
          volumeMounts:
            - mountPath: /data/plugins
              name: maubot-claim0
            - mountPath: /data/
              name: maubot-claim1
      restartPolicy: Always
      volumes:
        - name: maubot-claim0
          persistentVolumeClaim:
            claimName: maubot-claim0
        - name: maubot-claim1
          persistentVolumeClaim:
            claimName: maubot-claim1
status: {}
