apps/production/maubot/maubot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maubot
  namespace: matrix
spec:
  ports:
    - name: "29316"
      port: 29316 
      targetPort: 29316
      protocol: TCP
  selector:
    app.kubernetes.io/name: maubot
