apps/production/maubot/maubot-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maubot
  namespace: matrix
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: bridges.sulian.eu
    http:
      paths:
      - path: /_matrix/maubot
        pathType: Prefix
        backend:
          service: 
            name: maubot
            port:
              number: 29316
  tls:
  - hosts:
    - bridges.sulian.eu
    secretName: matrix-bridges-cert
